--- a/manifest.json
+++ b/manifest.json
@@ -12,11 +12,7 @@
             "link": "https://github.com/festoney8"
         }
     ],
-    "platform": [
-        "win32",
-        "linux",
-        "darwin"
-    ],
+    "platform": ["win32", "linux", "darwin"],
     "injects": {
         "renderer": "./src/renderer.js",
         "main": "./src/main.js",
